fix: delete btn overlaping text in choice, changed top value

--- a/views/scss/qtiCreator/_gap-match.scss
+++ b/views/scss/qtiCreator/_gap-match.scss
@@ -24,6 +24,9 @@
             @include simple-border();
             border-color: #ddd !important;
             min-width: 80px;
+            .mini-tlb{
+                top: -85%;
+            }
         }
     }
 
